Fix printing from PDF plugin

Update the plugin finder logic everywhere to match with Chrome. This
comes with a small cleanup: collect PDF-related helper functions
scattered around WebEngine in one pdf_util_qt implementation.

Add auto test to catch this recurring issue earlier.

Pick-to: 6.5 6.6 6.7
Task-number: QTBUG-119878
Change-Id: I03b2bd62bebf5b38afc572e0629db106d024e89d
Reviewed-by: Michael Brüning <michael.bruning@qt.io>